--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/schahriar/elio#readme",
   "dependencies": {
-    "body": "^5.1.0"
+    "body": "^5.1.0",
+    "shortid": "^2.2.8"
   }
 }
